Now the ao5s and the ao12s are saved in the save file so the bests can be restored!! :D